k8s/client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
    spec:
      containers:
        - name: client
          image: localhost:5000/client:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service 
metadata:
  name: client-srv 
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      target: 3000
      nodePort: 31515
