k8s/comment-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:           
        app: comments
    spec:
      containers:
        - name: comments
          image: localhost:5000/comments:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments        
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001   
      nodePort: 31516
