k8s/event-bus-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:          
        app: event
    spec:
      containers:
        - name: event
          image: localhost:5000/event-bus:latest
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: event
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
      nodePort: 31517
