k8s/moderation-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:           
        app: moderation
    spec:
      containers:
        - name: moderation
          image: localhost:5000/moderation:latest
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: NodePort
  selector:
    app: client        
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003   
      nodePort: 31518
