k8s/posts-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-clusterip-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-clusterip
  template:
    metadata:
      labels:           
        app: posts-clusterip
    spec:
      containers:
        - name: posts-clusterip
          image: localhost:5000/posts:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts       
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000   
      nodePort: 31519
